nacl: Working towards GLES2. Will init, shaders won't compile

--- a/shell/nacl/index.html
+++ b/shell/nacl/index.html
@@ -22,6 +22,6 @@ found in the LICENSE file.
   <!-- The NaCl plugin will be embedded inside the element with id "listener".
       See common.js.-->
   <div id="listener"></div>
-  <div id="log" style="white-space: pre-line;"></div>
+  <div id="log" style="display: none; white-space: pre-line;"></div>
 </body>
 </html>
